_generated-doc/2.16/config/quarkus-arc-general-config-items.adoc

:summaryTableId: quarkus-arc-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-arc-general-config-items_configuration]]link:#quarkus-arc-general-config-items_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-arc-general-config-items_quarkus.arc.dev-mode.monitoring-enabled]]`link:#quarkus-arc-general-config-items_quarkus.arc.dev-mode.monitoring-enabled[quarkus.arc.dev-mode.monitoring-enabled]`

[.description]
--
If set to true then the container monitors business method invocations and fired events during the development mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_DEV_MODE_MONITORING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_DEV_MODE_MONITORING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-arc-general-config-items_quarkus.arc.test.disable-application-lifecycle-observers]]`link:#quarkus-arc-general-config-items_quarkus.arc.test.disable-application-lifecycle-observers[quarkus.arc.test.disable-application-lifecycle-observers]`

[.description]
--
If set to true then disable `StartupEvent` and `ShutdownEvent` observers declared on application bean classes during the tests.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_TEST_DISABLE_APPLICATION_LIFECYCLE_OBSERVERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_TEST_DISABLE_APPLICATION_LIFECYCLE_OBSERVERS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-arc-general-config-items_quarkus.arc.context-propagation.enabled]]`link:#quarkus-arc-general-config-items_quarkus.arc.context-propagation.enabled[quarkus.arc.context-propagation.enabled]`

[.description]
--
If set to true and SmallRye Context Propagation extension is present then enable the context propagation for CDI contexts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_CONTEXT_PROPAGATION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_CONTEXT_PROPAGATION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


h|[[quarkus-arc-general-config-items_quarkus.arc.exclude-dependency-artifacts-that-should-be-excluded-from-discovery]]link:#quarkus-arc-general-config-items_quarkus.arc.exclude-dependency-artifacts-that-should-be-excluded-from-discovery[Artifacts that should be excluded from discovery]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-arc-general-config-items_quarkus.arc.exclude-dependency.-dependency-name-.group-id]]`link:#quarkus-arc-general-config-items_quarkus.arc.exclude-dependency.-dependency-name-.group-id[quarkus.arc.exclude-dependency."dependency-name".group-id]`

[.description]
--
The maven groupId of the artifact.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__GROUP_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__GROUP_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-arc-general-config-items_quarkus.arc.exclude-dependency.-dependency-name-.artifact-id]]`link:#quarkus-arc-general-config-items_quarkus.arc.exclude-dependency.-dependency-name-.artifact-id[quarkus.arc.exclude-dependency."dependency-name".artifact-id]`

[.description]
--
The maven artifactId of the artifact.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__ARTIFACT_ID+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__ARTIFACT_ID+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-arc-general-config-items_quarkus.arc.exclude-dependency.-dependency-name-.classifier]]`link:#quarkus-arc-general-config-items_quarkus.arc.exclude-dependency.-dependency-name-.classifier[quarkus.arc.exclude-dependency."dependency-name".classifier]`

[.description]
--
The maven classifier of the artifact.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__CLASSIFIER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ARC_EXCLUDE_DEPENDENCY__DEPENDENCY_NAME__CLASSIFIER+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===